Added files for Day2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(Day1_Part1 "Source/Day1/Part1/SecretEntrance.cpp")
 
 add_executable(Day1_Part2 "Source/Day1/Part2/SecretEntrance.cpp")
+
+add_executable(Day2_Part1 "Source/Day2/Part1/GiftShop.cpp")
