Added files for part 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(Day1_Part1 "Source/Day1/Part1/SecretEntrance.cpp")
 add_executable(Day1_Part2 "Source/Day1/Part2/SecretEntrance.cpp")
 
 add_executable(Day2_Part1 "Source/Day2/Part1/GiftShop.cpp")
+
+add_executable(Day2_Part2 "Source/Day2/Part2/GiftShop.cpp")
