Added stuff for Day4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ add_executable(Day1_Part2 "Source/Day1/Part2/SecretEntrance.cpp")
 add_executable(Day2_Part1 "Source/Day2/Part1/GiftShop.cpp")
 
 add_executable(Day2_Part2 "Source/Day2/Part2/GiftShop.cpp")
+
+add_executable(Day4_Part1 "Source/Day4/Part1/PrintingDepartment.cpp")
